# PlayStoreVisualiser

./: .gitattributes  .gitignore  Cargo.toml  README.md  mockup.html
.cargo/: config.toml
.github/workflows/: build-and-test-aarch64.yml  build-and-test-armv7.yml  build-and-test-linux.yml  build-and-test-macos.yml  build-and-test-windows.yml  release.yml
src/: generate.rs  lib.rs  main-server.rs  main.rs  model.rs  util.rs
src/server/: api.rs  config.rs  http.rs  https.rs  mod.rs  throttle.rs
tests/: hero-screenshots.html  hero-video.html  hero.html  list.html  mockup.html  test_hero.rs  test_mockup.rs
