[package]
name = "psv"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "psv"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
lol_html = "1.2.1"
scraper = "0.19"
chrono = "0.4.31"
semver = "1.0.20"
rand = "0.8.5"
reqwest = { version = "0.11", features = ["json"] }
openssl = { version = "0.10", features = ["vendored"] }